k8s/admin_server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: admin-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: admin-server
  template:
    metadata:
      labels:
        app: admin-server
    spec:
      containers:
        - name: admin-server
          image: movie_review-admin-server:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 9090
---
apiVersion: v1
kind: Service
metadata:
  name: admin-server
spec:
  selector:
    app: admin-server
  ports:
    - port: 9090
