k8s/image_service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: image-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: image-service
  template:
    metadata:
      labels:
        app: image-service
    spec:
      containers:
        - name: image-service
          image: movie_review-image_service:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: image-service
spec:
  selector:
    app: image-service
  ports:
    - port: 8081
