k8s/kafka-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kafka-rest-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kafka-rest-service
  template:
    metadata:
      labels:
        app: kafka-rest-service
    spec:
      containers:
        - name: kafka-rest-service
          image: confluentinc/cp-kafka:latest
          ports:
            - containerPort: 9092
---
apiVersion: v1
kind: Service
metadata:
  name: kafka-rest-service
spec:
  selector:
    app: kafka-rest-service
  ports:
    - port: 9092
      targetPort: 9092
      protocol: TCP
