k8s/movie_service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: movie-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: movie-service
  template:
    metadata:
      labels:
        app: movie-service
    spec:
      containers:
        - name: movie-service
          image: movie_service_image
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: movie-service
spec:
  ports:
    - port: 8080
  selector:
    app: movie-service
