k8s/review_service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: review-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: review-service
  template:
    metadata:
      labels:
        app: review-service
    spec:
      containers:
        - name: review-service
          image: review_service_image
          ports:
            - containerPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: review-service
spec:
  ports:
    - port: 8081
  selector:
    app: review-service
