k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: movie-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: ""
      http:
        paths:
          - path: /api/v1
            pathType: Prefix
            backend:
              service:
                name: movie-service
                port:
                  number: 8080

          - path: /api/admin
            pathType: Prefix
            backend:
              service:
                name: admin-server
                port:
                  number: 9090

          - path: /api/images
            pathType: Prefix
            backend:
              service:
                name: image-service
                port:
                  number: 8081
